# railway-exporter-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.combined  LICENSE  README.md  ROADMAP.md  config.yaml.example
.github/workflows/: build.yml  ci.yml  release.yml
dashboard/: package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/Common/: Icons.tsx  ServiceIcon.tsx  TimeDisplay.tsx  Tooltip.tsx  UptimeDisplay.tsx
dashboard/src/components/Dashboard/: Dashboard.tsx
dashboard/src/components/Filters/: CustomSelect.tsx
dashboard/src/components/Footer/: CacheInfo.tsx  Footer.tsx
dashboard/src/components/Header/: Header.tsx
dashboard/src/components/Legend/: Legend.tsx
dashboard/src/components/Overview/: Overview.tsx  StatCard.tsx
dashboard/src/components/ServicesTable/: ServiceRow.tsx  ServicesTable.tsx  SortIndicator.tsx
dashboard/src/components/common/: ServiceIcon.tsx
dashboard/src/components/providers/: QueryProvider.tsx
dashboard/src/hooks/: useCompactMode.ts  useDirection.ts  useLanguage.ts  useMetrics.ts  useServerStatus.ts  useUrlFilters.ts
dashboard/src/i18n/: keys.ts  legend.json  ui.json
dashboard/src/lib/: api.server.ts  api.test.ts  api.ts  columnWidths.ts  formatters.test.ts  formatters.ts  queryClient.ts  serviceIcons.tsx
dashboard/src/providers/: NuqsProvider.tsx  QueryProvider.tsx
dashboard/src/styles/: colors.ts
dashboard/src/types/: index.ts
debug-ui/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
debug-ui/src/: App.css  App.tsx
debug-ui/src/i18n/: keys.ts
grafana/: railway-dashboard.json
src/: client.rs  client_test.rs  collector.rs  collector_test.rs  config.rs  config_test.rs  lib.rs  main.rs  metrics.rs  metrics_test.rs  pricing.rs  pricing_test.rs  railway.rs  server.rs  server_test.rs  state.rs  state_test.rs  types.rs  types_test.rs
src/handlers/: health.rs  icons.rs  metrics.rs  mod.rs  static_files.rs  static_files_test.rs  status.rs  tests.rs
src/utils/: icons.rs  icons_test.rs  mod.rs  process_info.rs  process_info_test.rs
