[package]
name = "railway-exporter"
version = "1.0.0"
edition = "2021"
description = "Prometheus exporter for Railway.app billing and usage metrics"
license = "MIT"
repository = "https://github.com/brilliant-almazov/railway-exporter-rs"
keywords = ["railway", "prometheus", "exporter", "monitoring", "billing"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prometheus = "0.13"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
base64 = "0.22"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
