[package]
name = "railway-exporter"
version = "0.2.0"
edition = "2021"
description = "Prometheus exporter for Railway.app billing and usage metrics"
license = "MIT"
repository = "https://github.com/brilliant-almazov/railway-exporter-rs"
keywords = ["railway", "prometheus", "exporter", "monitoring", "billing"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prometheus = "0.13"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_yaml = "0.9"
base64 = "0.22"
tokio-tungstenite = "0.28.0"
futures-util = "0.3"
sysinfo = "0.32"
flate2 = "1"
lru = "0.12"
urlencoding = "2"

# Memory allocator with better memory return to OS (Linux only)
[target.'cfg(all(target_os = "linux", not(target_env = "msvc")))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["background_threads"] }
tikv-jemalloc-ctl = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
